Fix spacing.

--- a/client/app.scss
+++ b/client/app.scss
@@ -38,3 +38,7 @@ $table-border-color: darken($body-bg, 15%);
 	background-color: transparent;
 	color: $text-color;
 }
+
+.pending-member {
+	margin-top: 2px;
+}
